--- a/.github/.workflows/docker-push.yml
+++ b/.github/.workflows/docker-push.yml
@@ -1,10 +1,10 @@
 name: docker-push
 
-on:
-  workflow_dispatch:
-   push:
-     branches:
-       - 'main'
+on: workflow_dispatch
+  
+  #  push:
+  #    branches:
+  #      - 'main'
 
 jobs:
   docker:
